Rename admin to staff, fix QR code URLs, add BASE_URL config
- Renamed 'admin' role to 'staff' throughout the app
- Renamed templates/admin/ to templates/staff/
- Updated all routes from /admin/* to /staff/*
- Fixed qr_code endpoint name in templates
- Added BASE_URL environment variable for production URLs
- Updated render.yaml with BASE_URL for Render deployment

--- a/render.yaml
+++ b/render.yaml
@@ -7,3 +7,5 @@ services:
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.0
+      - key: BASE_URL
+        value: https://eventlogger-g6c5.onrender.com
