--- a/wrangler.toml
+++ b/wrangler.toml
@@ -9,11 +9,12 @@ BASE_URL = "https://eventlogger.pages.dev"
 [[d1_databases]]
 binding = "DB"
 database_name = "eventlogger-db"
-database_id = "46a3bed7-283e-4f1e-accd-01ea05d5fcfc"
+database_id = "YOUR_D1_DATABASE_ID_HERE"
 
-[[r2_buckets]]
-binding = "BUCKET"
-bucket_name = "eventlogger-uploads"
+# R2 Storage for profile pictures (optional - enable R2 in Cloudflare Dashboard first)
+# [[r2_buckets]]
+# binding = "BUCKET"
+# bucket_name = "eventlogger-uploads"
 
 [observability]
 enabled = true
