--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,20 +1,23 @@
 name = "eventlogger"
-main = "app.py"
+main = "src/index.js"
 compatibility_date = "2024-04-03"
-compatibility_flags = ["python_workers"]
 
 [vars]
-BASE_URL = "https://eventlogger.pages.dev"
+BASE_URL = "https://eventlogger.aamirakwarali.workers.dev"
 
 [[d1_databases]]
 binding = "DB"
 database_name = "eventlogger-db"
 database_id = "46a3bed7-283e-4f1e-accd-01ea05d5fcfc"
 
-# R2 Storage for profile pictures (optional - enable R2 in Cloudflare Dashboard first)
-# [[r2_buckets]]
-# binding = "BUCKET"
-# bucket_name = "eventlogger-uploads"
+[site]
+bucket = "./public"
+
+# Include templates as text modules
+[[rules]]
+type = "Text"
+globs = ["templates/**/*.html"]
+fallthrough = true
 
 [observability]
 enabled = true
